--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@neondatabase/serverless": "^0.10.4",
+    "@next/env": "^15.1.7",
+    "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/postcss": "^4.0.3",
     "next": "15.1.6",
     "pg": "^8.13.2",
